# neurodivergent-workplace-toolkit

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  INSTALL.md  README.md  TASKS.md  UVX_TESTING_INSTRUCTIONS.md  pyproject.toml  uvx.json
.github/workflows/: publish.yml
nwt/: __init__.py
nwt/resources/: context-interpretation.md  document-scaffolding.md  meeting-structure.md  tone-calibration.md
src/: server.py  start_server.py
src/resources/: message-clarity.md
tests/: test_server.py
