[project]
name = "neurodivergent-workplace-toolkit"
version = "0.1.0"
description = "MCP server providing workplace communication assistance for neurodivergent professionals"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
# Short, memorable CLI entry point for the toolkit
nwt = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["/src/resources"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "/tmp/.pytest_cache"
