[project]
name = "neurodivergent-workplace-toolkit"
version = "0.1.0"
description = "MCP server providing workplace communication assistance for neurodivergent professionals"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mo Goldberger" }]
requires-python = ">=3.10"
keywords = ["mcp", "neurodivergent", "communication", "workplace", "accessibility", "adhd", "autism"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mogoldb/neurodivergent-workplace-toolkit"
Issues = "https://github.com/mogoldb/neurodivergent-workplace-toolkit/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
# Short, memorable CLI entry point for the toolkit
nwt = "nwt.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nwt"]
include = ["/nwt/resources"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "/tmp/.pytest_cache"
